kubernetes/results.yaml
# Copyright 2019 Google LLC
#
# Licensed under the the Apache License v2.0 with LLVM Exceptions (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://llvm.org/LICENSE.txt
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: v1
kind: Namespace
metadata: 
  name: results
  labels: 
    name: results
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-results
  namespace: results
spec:
  selector:
    matchLabels:
      app: nginx-results
  replicas: 1 
  template:
    metadata:
      labels:
        app: nginx-results
    spec:
      containers:
      - name: nginx-results
        image: gcr.io/llvm-windows-development/nginx-results
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
#        volumeMounts:
#        - mountPath: /var/jenkins_home
#          name: jenkins-home
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-results
  namespace: results
spec:
  type: LoadBalancer
#  externalTrafficPolicy: Cluster
  selector:
    app: nginx-results
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
