kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-llvm-premerge
  annotations:    
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: http-auth
    # nginx.ingress.kubernetes.io/auth-realm: "LLVM pre-merge checks"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"    
    kubernetes.io/ingress.class: "nginx"
    # cert-manager
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # kubernetes.io/ingress.global-static-ip-name: "llvm-premerge"    
    acme.cert-manager.io/http01-edit-in-place: "true"
    # ^ cert-manager
spec:
  ingressClassName: nginx
  # cert-manager
  tls:
  - hosts:
    - llvm-premerge.org
    secretName: llvm-premerge-org-cert
  # ^ cert-manager
  defaultBackend:
    service:
      name: phabricator-proxy
      port:
        number: 8080
  rules:
  - host: llvm-premerge.org
    http:  
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: phabricator-proxy
            port:
              number: 8080
